// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Description List horizontal renders correctly 1`] = `
<jest>
  <dl>
    <div
      class="d-md-grid grid-3-9 mb-2-5"
    >
      <dt
        class="d-flex"
      >
        <svg
          class="me-2 mt-1 bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div
      class="d-md-grid grid-3-9 mb-2-5"
    >
      <div>
        <dt>
          First title label
        </dt>
        <dt
          class="d-flex"
        >
          <svg
            class="me-2 mt-1 bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </dt>
      </div>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div
      class="d-md-grid grid-3-9 mb-2-5"
    >
      <dt>
        Only title label
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
        <div>
          Description text goes here.
        </div>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List renders correctly 1`] = `
<jest>
  <dl>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="mb-0 d-inline-block"
      >
        Only title label with icon
      </p>
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <dt>
      First title label
    </dt>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="mb-0 d-inline-block"
      >
        Second title label
      </p>
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <dt>
      Only title label
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <dd>
      Description text goes here.
    </dd>
  </dl>
</jest>
`;

exports[`OE - Description List with title bordered renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <dl>
    <div
      class="mb-2-5 pb-1 border-bottom"
    >
      <dt>
        <svg
          class="me-2 bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div
      class="mb-2-5 pb-1 border-bottom"
    >
      <dt>
        First title label
      </dt>
      <dt>
        <svg
          class="me-2 bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Second title label
        </p>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div>
      <dt>
        Only title label
      </dt>
      <dd>
        Description text goes here.
      </dd>
      <dd>
        Description text goes here.
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title horizontal and bordered renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <dl>
    <div
      class="d-md-grid grid-3-9 mb-2-5 pb-2-5 border-bottom"
    >
      <dt
        class="d-flex"
      >
        <svg
          class="me-2 mt-1 bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd
        class="mb-0"
      >
        Description text goes here.
      </dd>
    </div>
    <div
      class="d-md-grid grid-3-9 mb-2-5 pb-2-5 border-bottom"
    >
      <div>
        <dt>
          First title label
        </dt>
        <dt
          class="d-flex"
        >
          <svg
            class="me-2 mt-1 bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </dt>
      </div>
      <dd
        class="mb-0"
      >
        Description text goes here.
      </dd>
    </div>
    <div
      class="d-md-grid grid-3-9 mb-2-5"
    >
      <dt>
        Only title label
      </dt>
      <dd
        class="mb-0"
      >
        <div>
          Description text goes here.
        </div>
        <div>
          Description text goes here.
        </div>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title horizontal renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <dl>
    <div
      class="d-md-grid grid-3-9 mb-2-5"
    >
      <dt
        class="d-flex"
      >
        <svg
          class="me-2 mt-1 bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div
      class="d-md-grid grid-3-9 mb-2-5"
    >
      <div>
        <dt>
          First title label
        </dt>
        <dt
          class="d-flex"
        >
          <svg
            class="me-2 mt-1 bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </dt>
      </div>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div
      class="d-md-grid grid-3-9 mb-2-5"
    >
      <dt>
        Only title label
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
        <div>
          Description text goes here.
        </div>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <dl>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="mb-0 d-inline-block"
      >
        Only title label with icon
      </p>
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <dt>
      First title label
    </dt>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="mb-0 d-inline-block"
      >
        Second title label
      </p>
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <dt>
      Only title label
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <dd>
      Description text goes here.
    </dd>
  </dl>
</jest>
`;
